# opengoose

./: .dockerignore  .gitignore  AGENTS.md  Cargo.toml  Dockerfile  LICENSE  PLAN.md  README.md  docker-compose.yml  plan.md  state.json  workflow-health-latest.md
crates/opengoose/: Cargo.toml
crates/opengoose-board/: Cargo.toml
crates/opengoose-board/src/: beads.rs  board.rs  branch.rs  db_board.rs  lib.rs  memory.rs  merge.rs  relations.rs  rigs.rs  stamp_ops.rs  stamps.rs  store.rs  test_fixtures.rs  test_helpers.rs  work_item.rs  work_items.rs
crates/opengoose-board/tests/: board_flow.rs  merge_props.rs  transition_props.rs
crates/opengoose-cli/: Cargo.toml  opengoose-project.yaml
crates/opengoose-cli/src/: bootstrap.rs  cli.rs  dispatch.rs  error.rs  main.rs  tests.rs
crates/opengoose-cli/tests/: auth_cli.rs  cli_api.rs  cli_smoke.rs  e2e_session_workflow.rs  message_cli.rs
crates/opengoose-core/: Cargo.toml
crates/opengoose-core/benches/: engine_bench.rs
crates/opengoose-core/src/: alerts.rs  bridge.rs  engine.rs  error.rs  gateway.rs  lib.rs  message_recorder.rs  message_utils.rs  plugins.rs  reconnect.rs  session_manager.rs  shutdown.rs  stream_orchestrator.rs  stream_responder.rs  throttle.rs  workflow_runner.rs
crates/opengoose-discord/: Cargo.toml
crates/opengoose-discord/src/: adapter.rs  gateway.rs  lib.rs
crates/opengoose-evolver/: Cargo.toml
crates/opengoose-evolver/src/: lib.rs  loop_driver.rs  pipeline.rs  skills.rs  sweep.rs
crates/opengoose-matrix/: Cargo.toml
crates/opengoose-matrix/src/: CLAUDE.md  gateway.rs  lib.rs  types.rs
crates/opengoose-persistence/: Cargo.toml
crates/opengoose-persistence/benches/: agent_messages.rs  alerts.rs  message_queue.rs  orchestration_store.rs  schedule_store.rs  session_store.rs
crates/opengoose-persistence/src/: agent_messages.rs  alerts.rs  api_key_store.rs  compact.rs  db.rs  db_enum.rs  error.rs  event_store.rs  hash_id.rs  lib.rs  memory_store.rs  message_queue.rs  models.rs  orchestration.rs  plugin_store.rs  prime.rs  prolly.rs  ready.rs  relationships.rs  run_status.rs  schedule_store.rs  schema.rs  session_store.rs  test_helpers.rs  trigger_store.rs  work_items.rs  workflow_runs.rs
crates/opengoose-profiles/: Cargo.toml
crates/opengoose-profiles/profiles/: architect.yaml  bug-triager.yaml  developer.yaml  main.yaml  researcher.yaml  reviewer.yaml  security-auditor.yaml  tester.yaml  writer.yaml
crates/opengoose-profiles/skills/: file-manager.yaml  git-tools.yaml  web-search.yaml
crates/opengoose-profiles/src/: defaults.rs  error.rs  goose_bridge.rs  lib.rs  profile.rs  skill.rs  skill_defaults.rs  skill_store.rs  store.rs  workspace.rs
crates/opengoose-profiles/workspace-templates/: BOOTSTRAP.md
crates/opengoose-projects/: Cargo.toml
crates/opengoose-projects/projects/: opengoose-dev.yaml
crates/opengoose-projects/src/: error.rs  lib.rs  project.rs  store.rs
crates/opengoose-prolly/: Cargo.toml
crates/opengoose-prolly/src/: lib.rs  store.rs  versioned.rs
crates/opengoose-provider-bridge/: Cargo.toml
crates/opengoose-provider-bridge/src/: lib.rs  service.rs  tests.rs  types.rs
crates/opengoose-rig/: Cargo.toml
crates/opengoose-rig/src/: agent_factory.rs  conversation_log.rs  error.rs  executor.rs  lib.rs  mcp_tools.rs  middleware.rs  pipeline.rs  portless.rs  rig.rs  test_fixtures.rs  witness.rs  work_mode.rs  worktree.rs
crates/opengoose-rig/tests/: worker_board_flow.rs  worker_integration.rs
crates/opengoose-sandbox/: Cargo.toml
crates/opengoose-sandbox/kernel/: Dockerfile  build-kernel.sh
crates/opengoose-sandbox/src/: boot.rs  client.rs  error.rs  initramfs.rs  lib.rs  machine.rs  pool.rs  snapshot.rs  uart.rs  virtio.rs  virtio_fs.rs  vm.rs  vring.rs
crates/opengoose-sandbox/tests/: bench_exec_breakdown.rs  bench_fork.rs  boot_test.rs  client_test.rs  fork_debug.rs  hvf_test.rs  integration_test.rs  machine_test.rs  snapshot_test.rs  uart_test.rs  virtio_fs_test.rs
crates/opengoose-secrets/: Cargo.toml
crates/opengoose-secrets/src/: config.rs  keyring_backend.rs  lib.rs  provider_registry.rs  resolver.rs
crates/opengoose-skills/: Cargo.toml
crates/opengoose-skills/src/: catalog.rs  error.rs  lib.rs  lifecycle.rs  loader.rs  metadata.rs  skill_name.rs  source.rs  test_fixtures.rs  test_utils.rs
crates/opengoose-slack/: Cargo.toml
crates/opengoose-slack/src/: gateway.rs  lib.rs  types.rs
crates/opengoose-team-tools/: Cargo.toml
crates/opengoose-team-tools/src/: main.rs
crates/opengoose-teams/: Cargo.toml
crates/opengoose-teams/src/: agent_pool.rs  chain_executor.rs  context.rs  defaults.rs  error.rs  executor_context.rs  fan_out_executor.rs  headless.rs  landing.rs  lib.rs  message_bus.rs  orchestrator.rs  plugin.rs  prompt_context.rs  recipe_bridge.rs  remote.rs  router_executor.rs  runner.rs  scheduler.rs  store.rs  team.rs  triggers.rs  witness.rs
crates/opengoose-teams/teams/: bug-triage.yaml  code-review.yaml  feature-dev.yaml  full-review.yaml  research-panel.yaml  security-audit.yaml  smart-router.yaml
crates/opengoose-teams/tests/: integration_pipeline.rs  integration_triggers.rs
crates/opengoose-telegram/: Cargo.toml
crates/opengoose-telegram/src/: format.rs  gateway.rs  lib.rs
crates/opengoose-tui/: Cargo.toml
crates/opengoose-tui/src/: app.rs  command.rs  event.rs  input.rs  lib.rs  theme.rs  tracing_layer.rs
crates/opengoose-types/: Cargo.toml
crates/opengoose-types/src/: beads.rs  error.rs  events.rs  health.rs  lib.rs  metrics.rs  naming.rs  platform.rs  plugin.rs  session.rs  streaming.rs  tests.rs  yaml_store.rs
crates/opengoose-web/: Cargo.toml
crates/opengoose-web/assets/: app.css  app.js  theme-boot.js
crates/opengoose-web/benches/: handlers.rs  templates.rs
crates/opengoose-web/src/: data.rs  error.rs  fixtures.rs  lib.rs  live.rs  metrics.rs  middleware.rs  openapi.rs  pages.rs  routes.rs  server.rs  state.rs  test_support.rs  tests.rs  tls.rs
crates/opengoose-web/templates/: agent_detail.html  agent_map.html  agents.html  alerts.html  (+16 more)
crates/opengoose-workflows/: Cargo.toml
(+1107 files in other folders)
