[workspace]
resolver = "2"
members = [
    "crates/opengoose-types",
    "crates/opengoose-core",
    "crates/opengoose-discord",
    "crates/opengoose-telegram",
    "crates/opengoose-slack",
    "crates/opengoose-matrix",
    "crates/opengoose-tui",
    "crates/opengoose-secrets",
    "crates/opengoose-profiles",
    "crates/opengoose-teams",
    "crates/opengoose-persistence",
    "crates/opengoose-cli",
    "crates/opengoose-provider-bridge",
    "crates/opengoose-web",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"

[workspace.dependencies]
opengoose-types = { path = "crates/opengoose-types" }
opengoose-core = { path = "crates/opengoose-core" }
opengoose-discord = { path = "crates/opengoose-discord" }
opengoose-tui = { path = "crates/opengoose-tui" }
opengoose-secrets = { path = "crates/opengoose-secrets" }
opengoose-profiles = { path = "crates/opengoose-profiles" }
opengoose-teams = { path = "crates/opengoose-teams" }
opengoose-persistence = { path = "crates/opengoose-persistence" }
opengoose-telegram = { path = "crates/opengoose-telegram" }
opengoose-slack = { path = "crates/opengoose-slack" }
opengoose-matrix = { path = "crates/opengoose-matrix" }
opengoose-provider-bridge = { path = "crates/opengoose-provider-bridge" }
opengoose-web = { path = "crates/opengoose-web" }

keyring = { version = "3", features = ["sync-secret-service", "apple-native", "windows-native"] }
zeroize = { version = "1", features = ["derive"] }
dirs = "6"
toml = "1"
clap = { version = "4", features = ["derive"] }
rpassword = "7"

ratatui = "0.30"
crossterm = "0.29"
nucleo-matcher = "0.3"

async-trait = "0.1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal", "time", "sync"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dashmap = "6"
thiserror = "2"
tokio-util = "0.7"
diesel = { version = "2.2", features = ["sqlite", "returning_clauses_for_sqlite_3_35"] }
diesel_migrations = { version = "2.2", features = ["sqlite"] }
libsqlite3-sys = { version = "0.30", features = ["bundled"] }
uuid = { version = "1", features = ["v4"] }
cron = "0.15"
chrono = { version = "0.4", default-features = false, features = ["std", "clock"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
urlencoding = "2"
notify = "7"
globset = "0.4"
