[workspace]
resolver = "2"
members = [
    "crates/opengoose",
    "crates/opengoose-board",
    "crates/opengoose-rig",
]

[workspace.package]
version = "0.2.0"
edition = "2024"
license = "MIT"

[workspace.dependencies]
opengoose-board = { path = "crates/opengoose-board" }
opengoose-rig = { path = "crates/opengoose-rig" }

# Goose — agent runtime (the only LLM interface)
goose = { git = "https://github.com/block/goose", tag = "v1.27.2", default-features = false }

# Async runtime
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal", "time", "sync"] }
tokio-util = "0.7"
async-trait = "0.1"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"

# Data
chrono = { version = "0.4", default-features = false, features = ["std", "clock", "serde"] }
sea-orm = { version = "2.0.0-rc", features = ["sqlx-sqlite", "runtime-tokio-native-tls", "macros", "with-chrono"], default-features = false }

# Error handling & logging
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Web
axum = "0.8"
tokio-stream = { version = "0.1", features = ["sync"] }

# CLI
clap = { version = "4", features = ["derive"] }

# TUI
ratatui = "0.29"
crossterm = { version = "0.28", features = ["event-stream"] }
