[package]
name = "opengoose-board"
description = "Wanted Board — pull-based work distribution with Beads algorithms and Dolt-inspired CoW store"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
chrono = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
