[package]
name = "opengoose-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "opengoose"
path = "src/main.rs"

[dependencies]
opengoose-types = { workspace = true }
opengoose-core = { workspace = true }
opengoose-discord = { workspace = true }
opengoose-telegram = { workspace = true }
opengoose-slack = { workspace = true }
opengoose-matrix = { workspace = true }
opengoose-tui = { workspace = true }
opengoose-secrets = { workspace = true }
opengoose-profiles = { workspace = true }
opengoose-teams = { workspace = true }
opengoose-persistence = { workspace = true }
goose = { workspace = true }
opengoose-provider-bridge = { workspace = true }
opengoose-web = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tokio-util = { workspace = true }
clap = { workspace = true }
clap_complete = "4"
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
urlencoding = { workspace = true }
rpassword = { workspace = true }
rustls = { version = "0.23", features = ["ring"], default-features = false }
tokio-tungstenite = { version = "0.28", features = ["rustls-tls-webpki-roots"] }
futures-util = "0.3"

[dev-dependencies]
tempfile = "3"
assert_cmd = "2"
predicates = "3"
