[package]
name = "opengoose-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
opengoose-types = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
dashmap = { workspace = true }
tokio-util = { workspace = true }
serde_json = { workspace = true }
goose = { git = "https://github.com/block/goose", tag = "v1.26.1", default-features = false }
