[package]
name = "opengoose-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
opengoose-types = { workspace = true }
opengoose-profiles = { workspace = true }
opengoose-teams = { workspace = true }
opengoose-persistence = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
dashmap = { workspace = true }
uuid = { workspace = true }
tokio-util = { workspace = true }
serde_json = { workspace = true }
goose = { git = "https://github.com/block/goose", tag = "v1.27.2", default-features = false }

[dev-dependencies]
criterion = { version = "0.8", features = ["html_reports"] }

[[bench]]
name = "engine_bench"
harness = false
