[package]
name = "opengoose-discord"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
opengoose-types = { workspace = true }
opengoose-core = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tokio-util = { workspace = true }
goose = { git = "https://github.com/block/goose", tag = "v1.26.1", default-features = false }
twilight-gateway = "0.17"
twilight-http = "0.17"
twilight-model = "0.17"
twilight-validate = "0.17"
