[package]
name = "opengoose-evolver"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
opengoose-board = { workspace = true }
opengoose-rig = { workspace = true }
opengoose-skills = { workspace = true }
goose = { workspace = true }
async-trait = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
futures = "0.3"
dirs = "6"

[dev-dependencies]
chrono = { workspace = true }
serde_json = { workspace = true }
tempfile = "3"
proptest = "1"
