[package]
name = "opengoose-persistence"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
opengoose-types = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
diesel = { workspace = true }
diesel_migrations = { workspace = true }
libsqlite3-sys = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
dirs = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
sha2 = { workspace = true }

[dev-dependencies]
tempfile = "3"
criterion = { version = "0.8", features = ["html_reports"] }
opengoose-types = { workspace = true }

[[bench]]
name = "session_store"
harness = false

[[bench]]
name = "message_queue"
harness = false

[[bench]]
name = "schedule_store"
harness = false

[[bench]]
name = "agent_messages"
harness = false
