[package]
name = "opengoose-profiles"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
opengoose-types = { workspace = true }
serde = { workspace = true }
serde_yaml = "0.9"
anyhow = { workspace = true }
thiserror = { workspace = true }
dirs = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tempfile = "3"
