[package]
name = "opengoose-prolly"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
prollytree = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
