[package]
name = "opengoose-provider-bridge"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
opengoose-secrets = { workspace = true }
goose = { git = "https://github.com/block/goose", tag = "v1.26.1", default-features = false }
tokio = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
