[package]
name = "opengoose-rig"
description = "Agent Rig — persistent pull loop wrapping Goose Agent::reply()"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
opengoose-board = { workspace = true }
goose = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
