[package]
name = "opengoose-rig"
description = "Agent Rig — persistent pull loop wrapping Goose Agent::reply()"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
opengoose-board = { workspace = true }
opengoose-skills = { workspace = true }
goose = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
dirs = "6"
futures = "0.3"
rmcp = { version = "1.2", features = ["schemars"] }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tempfile = "3"
proptest = "1"
