[package]
name = "opengoose-secrets"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
keyring = { workspace = true }
zeroize = { workspace = true }
dirs = { workspace = true }
serde = { workspace = true }
toml = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tokio = { version = "1", features = ["rt"] }
