[package]
name = "opengoose-secrets"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
keyring = { version = "3", features = ["sync-secret-service", "apple-native", "windows-native"] }
zeroize = { version = "1", features = ["derive"] }
dirs = { workspace = true }
serde = { workspace = true }
toml = "1"
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
tempfile = "3"
