[package]
name = "opengoose-skills"
description = "Skill loading, evolution, metadata, and management for OpenGoose"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
chrono = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
dialoguer = "0.11"
tokio = { workspace = true }

[dev-dependencies]
tempfile = "3"
