[package]
name = "opengoose-slack"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
opengoose-types = { workspace = true }
opengoose-core = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tokio-util = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
goose = { git = "https://github.com/block/goose", tag = "v1.27.2", default-features = false }
reqwest = { version = "0.13", features = ["json", "query"] }
tokio-tungstenite = { version = "0.28", features = ["native-tls"] }
url = "2"
futures-util = "0.3"
