[package]
name = "opengoose-slack"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
opengoose-types = { workspace = true }
opengoose-core = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tokio-util = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
goose = { workspace = true }
reqwest = { workspace = true }
tokio-tungstenite = { version = "0.28", features = ["native-tls"] }
url = "2"
futures-util = { workspace = true }
