[package]
name = "opengoose-teams"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
opengoose-profiles = { workspace = true }
opengoose-persistence = { workspace = true }
opengoose-types = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
dirs = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
futures = "0.3"
uuid = { workspace = true }
goose = { git = "https://github.com/block/goose", tag = "v1.27.0", default-features = false }

[dev-dependencies]
tempfile = "3"
