[package]
name = "opengoose-teams"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
opengoose-profiles = { workspace = true }
opengoose-persistence = { workspace = true }
opengoose-projects = { workspace = true }
opengoose-types = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
dirs = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
futures = "0.3"
uuid = { version = "1", features = ["v4"] }
cron = { workspace = true }
chrono = { workspace = true }
toml = { workspace = true }
tokio-util = { workspace = true }
notify = { workspace = true }
globset = { workspace = true }
goose = { workspace = true }

[dev-dependencies]
tempfile = "3"
