[package]
name = "opengoose-tui"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
opengoose-types = { workspace = true }
opengoose-secrets = { workspace = true }
opengoose-teams = { workspace = true }
tokio = { workspace = true, features = ["time", "sync"] }
tokio-util = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
ratatui = "0.30"
crossterm = "0.29"
nucleo-matcher = "0.3"

[dev-dependencies]
tempfile = "3"
