[package]
name = "opengoose-web"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
opengoose-core = { workspace = true }
opengoose-types = { workspace = true }
opengoose-persistence = { workspace = true }
opengoose-profiles = { workspace = true }
opengoose-teams = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
async-stream = { workspace = true }
futures-core = { workspace = true }
askama = "0.15"
axum = { version = "0.8.8", features = ["ws"] }
axum-server = { version = "0.7", features = ["tls-rustls"] }
hex = "0.4"
hmac = "0.12"
sha2 = "0.10"
tower = "0.5"
tower-http = { version = "0.6.8", features = ["cors", "fs"] }
urlencoding = "2"

[dev-dependencies]
criterion = { workspace = true }
diesel = { workspace = true }
futures-util = { workspace = true }
opengoose-persistence = { workspace = true }
opengoose-types = { workspace = true }
tempfile = { workspace = true }
tower = "0.5"

[[bench]]
name = "templates"
harness = false

[[bench]]
name = "handlers"
harness = false
