[package]
name = "opengoose"
description = "OpenGoose v0.2 — Goose-native pull architecture with Wasteland-level agent autonomy"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "opengoose"
path = "src/main.rs"

[dependencies]
opengoose-board = { workspace = true }
goose = { workspace = true }
tokio = { workspace = true }
futures = "0.3"
rmcp = { version = "0.16", features = ["schemars"] }
dirs = "6"
clap = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
axum = { workspace = true }
tokio-stream = { workspace = true }
serde = { workspace = true }
sea-orm = { workspace = true }
chrono = { workspace = true }
ratatui = { workspace = true }
crossterm = { workspace = true }
unicode-width = { workspace = true }
